sources jar should not be touched after signing
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>